# Kroniax-Mapeditor-old

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/levels/custom/: empty.cfg
include/: guiActions.hpp  initGui.hpp  level.cpp  level.hpp  levelEditor.cpp  levelEditor.hpp  levelLine.cpp  levelLine.hpp  scriptManager.cpp  scriptManager.hpp
include/AwGUI/: awMessageBox.cpp  awMessageBox.hpp  button.cpp  button.hpp  dropDownMenu.cpp  dropDownMenu.hpp  enum.hpp  gui.cpp  gui.hpp  inputBox.cpp  inputBox.hpp  layer.cpp  layer.hpp  panel.cpp  panel.hpp
include/utilities/: converter.cpp
